[package]
name = "rasp-drv8847-bdc-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = { version = "0.13.1", features = ["hal"] }
cursive = { version = "0.16", default-features = false, features = ["termion-backend"]}